# actix-auth-api

./: .env.example  Cargo.toml  README.md  api.mk  postgres.conf  postgres.mk  sample.sql
src/: auth.rs  handler.rs  handlers.rs  main.rs  model.rs
web/: index.html  package.json
web/src/: App.tsx  index.css
web/src/api/: Auth.ts  Database.ts  DeviceInfoAPI.ts  Station.ts  index.ts
web/src/components/: AutoLogout.tsx  Button.tsx  HomeLayout.tsx  NavBar.tsx  ProtectedLayout.tsx  SideBar.tsx  Table.tsx  index.ts
web/src/hooks/: useAuthStore.ts  useOnClickOutside.ts
web/src/pages/: Home.tsx  Login.tsx  PageNotFound.tsx  Query.tsx  Sfis.tsx  Upload.tsx  index.ts
