[package]
name = "asr-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4" }
actix-web-httpauth = "0.8.0"
dotenv = "0.15.0"

jsonwebtoken = "8"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.6.3", features = ["runtime-async-std", "postgres", "chrono", "uuid"] }
