[package]
name = "asr-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4" }
actix-cors = "~0.6.4"
actix-web-httpauth = "0.8.0"
dotenv = "0.15.0"
log = "0.4.0"
env_logger = "0.9.0"

jsonwebtoken = "8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "~1.0"
sqlx = { version = "0.6.3", features = ["runtime-actix-native-tls", "postgres", "chrono", "uuid"] }
url = "2.3.1"

awc = {version="3.1.1",  features = ["rustls"] }

[profile.dev.package.sqlx-macros]
opt-level = 3
